--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,19 @@
 {{ define "main" }}
-<main>
-  <article>
-    {{ if .Title }}<h1>{{ .Title }}</h1>{{ end }}
-    <time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "January 2, 2006" }}</time>
-    {{ .Content }}
+<main class="site-main">
+  <article class="post h-entry">
+    <header class="post-header">
+      {{ with .Title }}
+      <h1 class="post-title p-name">{{ . }}</h1>
+      {{ end }}
+      {{ if not .Date.IsZero }}
+      <div class="post-meta">
+        <time class="dt-published" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2 Jan 2006" }}</time>
+      </div>
+      {{ end }}
+    </header>
+    <section class="post-body e-content">
+      {{ .Content }}
+    </section>
   </article>
 </main>
 {{ end }}
