--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="site-main site-main--feed">
+<main class="site-main">
   <div class="post-feed h-feed">
     {{ range .Site.RegularPages }}
     <article class="post-card h-entry">
