--- a/static/custom.css
+++ b/static/custom.css
@@ -149,6 +149,12 @@ a {
   color: var(--color-accent);
 }
 
+.post-card-categories {
+  font-size: var(--step--1);
+  color: var(--color-accent);
+  font-weight: 550;
+}
+
 
 /* Single post */
 
