--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <main class="site-main">
   <div class="post-feed h-feed">
-    {{ range .Site.RegularPages }}
+    {{ range where .Site.RegularPages "Type" "post" }}
     <article class="post-card h-entry">
       <a href="{{ .Permalink }}" class="post-card-link u-url">
         <div class="post-card-content">
