--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,5 +5,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="{{ "css/blorofin.css" | relURL }}?{{ .Site.Params.theme_seconds }}">
 {{ partial "microblog_head.html" . }}
 </head>
